# scone

./: .gitignore  README.md
ca/: CMakeLists.txt  JSON.cpp  JSON.hpp  Request.cpp  Request.hpp  SSLConfig.cpp  SSLConfig.hpp  create_structure.sh  main.cpp
cert_auth/: .env  go.mod  go.sum  main.go
cert_auth/endpoints/: create.go  root.go
cert_auth/util/: gen_csr.go  gen_key.go  gen_p12.go  sign_csr.go  static.go
db/: create_structure.sh  index.ts  lib.ts  package-lock.json  package.json
db/routes/: create.ts
db_server/: .env  index.ts  package-lock.json  package.json  tsconfig.json
db_server/certs/: server.crt  server.csr  server.key
db_server/routes/: auth.ts  create.ts
dbm/: index.ts  package-lock.json  package.json
dbm/routes/: create.ts  delete.ts  get.ts  go.ts
radius-server/: init.sh
radius-server/src/: go.mod  go.sum  main.go
server/: init.sh  package.json  tsconfig.json
server/src/: index.ts
server/src/certs/: server-cert.pem  server-csr.pem  server-key.pem
